# goxlrutil_api

./: .gitignore  .layout.kdl  LICENSE  PLAN.md  README.md  USAGE.md  check.sh  pyproject.toml  webapp.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: goxlr-python-feature.prompt.md
.github/workflows/: ci.yml  release.yml  wiki.yml
apps/demo_webapp/: __init__.py  main.py
apps/demo_webapp/static/: style.css
apps/demo_webapp/templates/: _button_log.html  _effect_params.html  _effects_block.html  _fader_block.html  _fader_rows.html  _mic_settings.html  _profile_select.html  _router.html  _volume_rows.html  index.html
docs/wiki/: Client-API.md  Effects-and-Sampler.md  Fader-Assignment-and-Routing.md  Home.md  Installation-and-Transports.md  Integration-Guide.md  Lighting-and-Colours.md  Live-Updates-and-Events.md  Mic-EQ-and-Audio.md  Profiles-Scribble-and-Misc.md  Sending-Commands.md
src/goxlrutil_api/: __init__.py  client.py  colour.py  events.py  exceptions.py  state.py  sync.py
src/goxlrutil_api/protocol/: __init__.py  commands.py  responses.py  types.py
src/goxlrutil_api/transport/: __init__.py  base.py  http.py  socket.py  websocket.py
tests/: conftest.py
tests/fixtures/: status_example.json
tests/integration/: test_live.py
tests/unit/: test_button_events.py  test_client_callbacks.py  test_client_clamping.py  test_commands.py  test_framing.py  test_state_patch.py
